@@ -1,6 +1,7 @@
 Version 5.6
 
-Bug Fixes: <none>
+Bug Fixes: 
+           1. Emergency Sync fix for Windows users.
        
           
 Improvements: <none>
@@ -8,6 +9,7 @@ Improvements: <none>
          
 New Features:                
             1. Performance Testing - Folders support.
+            2. Syncing compares MD5 sum to determine if object is different.
   
 Features:
 
